# Naegling-Server

./: AUTHORS  DEPENDENCIES.TXT  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool  tcp
autom4te.cache/: output.0  output.1  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.0t  traces.1  traces.2  traces.3  traces.4  traces.5  traces.5t  traces.6  traces.7  traces.8  traces.9
src/: Makefile  Makefile.am  Makefile.in  db-control-sqlite.c  db-control-sqlite.h  naegling-com.c  naegling-com.c.bak  naegling-com.h  naegling-main.c  naegling-main.h  vm-control.c  vm-control.h
src/.deps/: db-control-sqlite.Po  naegling-com.Po  naegling-main.Po  vm-control.Po
